--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,8 @@ layout: table_wrappers
       {% include nav.html %}
     </nav>
     <footer class="site-footer">
-      This site uses <a href="https://github.com/pmarsceill/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
+      This site uses <a href="https://github.com/pmarsceill/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.<br/>
+      Just the Docs is distributed by an [MIT license](https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt).
     </footer>
   </div>
   <div class="main" id="top">
