Fixed footer text and enabled search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@ layout: table_wrappers
     </nav>
     <footer class="site-footer">
       This site uses <a href="https://github.com/pmarsceill/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.<br/>
-      Just the Docs is distributed by an [MIT license](https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt).
+      Just the Docs is distributed by an <a href="https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt">MIT license</a>.
     </footer>
   </div>
   <div class="main" id="top">
